gradient added to search bar

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.gradient {
+  background: rgb(58, 99, 144);
+  background: linear-gradient(
+    90deg,
+    rgba(58, 99, 144, 1) 8%,
+    rgba(90, 140, 182, 1) 31%,
+    rgba(35, 71, 138, 1) 52%,
+    rgba(27, 55, 125, 1) 58%
+  );
+}
